# calc-full-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: add-gtest.cmake
src/: CMakeLists.txt  main.cpp
src/calc/: CMakeLists.txt  calc.cpp
src/calc/ include/calc/: calc.h
test/: CMakeLists.txt  tests.cpp
